--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=figurinhas_db;Username=figurinhas;Password=senhaultrasecretaaaA"
+    "DefaultConnection": "Host=localhost; Database=postgres; Username=user;"
+  },
+  "Jwt": {
+    "Key": "Q6BdpuDcgep7%L3%7DFVPna@bmrfikW4"
   }
 }
