--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,17 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: Cache@2  # Not required, but Qodana will open projects with cache faster.
+  inputs:
+    key: '"$(Build.Repository.Name)" | "$(Build.SourceBranchName)" | "$(Build.SourceVersion)"'
+    path: '$(Agent.TempDirectory)/qodana/cache'
+    restoreKeys: |
+      "$(Build.Repository.Name)" | "$(Build.SourceBranchName)"
+      "$(Build.Repository.Name)"
+- task: QodanaScan@2025.1
+  env:
+    QODANA_TOKEN: $(QODANA_TOKEN)
+    QODANA_ENDPOINT: 'https://qodana.cloud'
 - task: UseDotNet@2
   inputs:
     version: '9.x'
